Fix pom issues and add the correct dependency jar to build success for integration/presto