@@ -43,24 +43,32 @@
     <dependency>
       <groupId>org.apache.carbondata</groupId>
       <artifactId>carbondata-core</artifactId>
-      <version>1.0.0-incubating</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.carbondata</groupId>
       <artifactId>carbondata-common</artifactId>
-      <version>1.0.0-incubating</version>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.carbondata</groupId>
+      <artifactId>carbondata-processing</artifactId>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.carbondata</groupId>
       <artifactId>carbondata-hadoop</artifactId>
-      <version>1.0.0-incubating</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
       <groupId>io.airlift</groupId>
       <artifactId>bootstrap</artifactId>
+      <version>0.144</version>
+      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
@@ -72,39 +80,48 @@
     <dependency>
       <groupId>io.airlift</groupId>
       <artifactId>json</artifactId>
+      <version>0.144</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>io.airlift</groupId>
       <artifactId>log</artifactId>
+      <version>0.144</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>io.airlift</groupId>
       <artifactId>slice</artifactId>
+      <version>0.29</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>io.airlift</groupId>
       <artifactId>units</artifactId>
+      <version>1.0</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
+      <version>2.6.0</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+      <version>14.0.1</version>
     </dependency>
 
     <dependency>
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
+      <version>3.0</version>
     </dependency>
 
     <!--presto intergated-->
@@ -118,11 +135,40 @@
     <dependency>
       <groupId>com.facebook.presto.hadoop</groupId>
       <artifactId>hadoop-apache2</artifactId>
+      <version>2.7.3-1</version>
     </dependency>
   </dependencies>
 
     <build>
       <plugins>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.18</version>
+          <!-- Note config is repeated in scalatest config -->
+          <configuration>
+            <includes>
+              <include>**/Test*.java</include>
+              <include>**/*Test.java</include>
+              <include>**/*TestCase.java</include>
+              <include>**/*Suite.java</include>
+            </includes>
+            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+            <argLine>-Xmx3g -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=512m</argLine>
+            <systemProperties>
+              <java.awt.headless>true</java.awt.headless>
+            </systemProperties>
+            <failIfNoTests>false</failIfNoTests>
+          </configuration>
+        </plugin>
+        <!--
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
@@ -165,7 +211,7 @@
             <skip>true</skip>
           </configuration>
         </plugin>
-        <!--
+
         <plugin>
           <groupId>pl.project13.maven</groupId>
           <artifactId>git-commit-id-plugin</artifactId>
